--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,94 @@ body {
     height: 100%;
     
 }
+
+
+.social-image{
+    width: 30px;
+    margin: 15px;
+}
+
+.header{
+   background-color:black;
+    color:white;
+   text-align: center;
+    font-size:70px;
+    margin-top:15px;
+    margin-bottom:15px;
+}
+   
+.aboutMain{
+    background-color:#090F77;
+    color:#FFCA28;
+    align-items:center;
+    font-size:20px;
+    margin-top:5px;
+    margin-bottom:5px;
+}
+.aboutme{
+    border:1px solid black;   
+}
+
+
+.navbar {
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+    background-color:#090F77;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size:25px;
+    font-family: 'Eczar', serif;
+}
 a {
-    text-decoration: none;
+    color: #8e7932;
+    text-decoration:none;
 }
 
 .main {
     height: 100%;
+    background-image: url("https://e00-elmundo.uecdn.es/assets/multimedia/imagenes/2018/04/29/15250305774313.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
-.social-image{
-    width: 30px;
-    margin: 15px;
+
+.footer {
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+    color: #8e7932;
+    background-color:black;
+}
+
+.leftPane {
+    display:flex;
+    justify-content:center;
+    font-size: 20px;
+    padding-right: 25px;
+    color:#FFCA28;
+}
+
+.rightPane {
+    display: flex;
+    justify-content:start;
+    width: 25%;
+}
+
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.thumbnail {
+    margin: 30px;
+    border: solid #8e7932;
+    width: 250px;
+    height: 250px;
+}
+
+.thumbnail-image {
+    height: 100%;
+    width: 100%;
 }
